Use Lombok annotations to simplify getter and setter methods, improve code readability, and remove redundant manual implementations